Bug 320897 - selection files with selection rectangle doesn't work if the rectangle has 0 pixel height
Summary: selection files with selection rectangle doesn't work if the rectangle has 0 ...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: 16.12.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2013-06-08 13:15 UTC by Teodor
Modified: 2013-06-20 17:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Teodor 2013-06-08 13:15:57 UTC
While selecting a file with selection rectange, it may unselect, if rectangle becomes 0 pixels. It is necesary to prevent the rectangle from being reduced to zero, if it has been appeared at least for 1 pixel.

Also it won't select at all if you move the cursor left or right while clicking, you have to move it up or down

Reproducible: Always

Steps to Reproduce:
1.just try to select a file with the selection rectangle, which has 0 pixel height
Actual Results:  
nothing will be selected

Expected Results:  
a file should be selected
Comment 1 Kai Uwe Broulik 2013-06-10 11:59:35 UTC
Works fine in Open/Save dialogs, doesn't work in Dolphin. Re-assigning.
Comment 2 Teodor 2013-06-10 12:18:22 UTC
> It is necesary to prevent the rectangle from being reduced to zero, if it has been appeared at least for 1 pixel.

I think it would be better to make rectangle always have at least 1 pixel
Comment 3 Emmanuel Pescosta 2013-06-20 17:10:57 UTC
Git commit 22d93e8f31777de3484b89b5f314aa8ac169367f by Emmanuel Pescosta.
Committed on 20/06/2013 at 17:02.
Pushed by emmanuelp into branch 'KDE/4.10'.

Prevent the selection rectangle from being reduced to 0px
width or 0px height, so the selected items can not be accidently
unselected when the rectangle width/height becomes 0px.
REVIEW: 111144
FIXED-IN: 4.10.5

M  +16   -0    dolphin/src/kitemviews/private/kitemlistrubberband.cpp

http://commits.kde.org/kde-baseapps/22d93e8f31777de3484b89b5f314aa8ac169367f