Prevent the selection rectangle from being reduced to 0px width or 0px height, so the selected items can not be accidently unselected when the rectangle width/height becomes 0px.

BUG: 320897
REVIEW: 111144
FIXED-IN: 4.10.5